plugins {
    id 'java'
    id 'war'
}

group = 'com.sergeineretin'
version = '1.0-SNAPSHOT'

sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.hibernate.orm:hibernate-core:6.2.6.Final'
    implementation 'org.hibernate.orm:hibernate-c3p0:6.2.6.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'com.h2database:h2:2.2.224'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.slf4j:slf4j-simple:2.0.13'
    providedCompile('jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0')
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    implementation 'org.modelmapper:modelmapper:3.1.1'
}

war {
    from("src/main/webapp") {
        include "WEB-INF/**/*.jsp"
    }
}

test {
    useJUnitPlatform()
}